--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,10 @@
-name: CI
+name: Nightly bulids
 
 on:
-  push:
-    branches:
-    - action
-    tags:
-    - '*'
+  workflow_dispatch:
+  schedule:
+    - cron: "0 0 * * *"
+
 
 jobs:
   build:
@@ -14,12 +13,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Check if bubblewrap had a commit in the last day
+        run: |
+          bash -c "${{ github.workspace}}/should_run.sh"
       - name: Build
         run: |
-            sudo bash -c "${{ github.workspace }}/build.sh"
+            bash -c "${{ github.workspace }}/build.sh"
       - name: Release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: bubblewrap-static-*.tar.xz
         env:
