Sadly I did not get away with that. The real question: do I get away with this?

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,11 @@ jobs:
       - name: Build
         run: |
             bash -c "${{ github.workspace }}/build.sh"
+      - name: Create a tag
+        uses: laputansoft/github-tag-action@v4.6
+        with:
+          github_token: ${{ env.github-token }}
+          tag: ${{ env.BWRAP_VER }}
       - name: Release
         uses: ncipollo/release-action@v1
         with:
