--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,10 +20,14 @@ jobs:
         run: |
             bash -c "${{ github.workspace }}/build.sh"
       - name: Create a tag
-        uses: laputansoft/github-tag-action@v4.6
-        with:
-          github_token: ${{ env.github-token }}
-          tag: ${{ env.BWRAP_VER }}
+        run: |
+            curl \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }} \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/${{ github.event.repository.name }}/git/tags \
+            -d '{"tag":${{ env.BWRAP_VER }},"message":"automated commit","object":"${GITHUB_SHA}","type":"commit"}'
       - name: Release
         uses: ncipollo/release-action@v1
         with:
