--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Release
         uses: ncipollo/release-action@v1
         with:
-          artifacts: bubblewrap-static-*.tar.xz
+          artifacts: release/bwrap
           commit: main
           name: ${{ env.BWRAP_VER }}
           tag: ${{ env.BWRAP_VER }}
