--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,10 +13,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Check if bubblewrap had a commit in the last day
         run: |
-          bash -c "${{ github.workspace}}/should_rebuild.sh"
+          bash -c "${{ github.workspace }}/should_rebuild.sh"
+        if: ${{ github.event_name }} == schedule
       - name: Build
         run: |
           sudo -E bash -c "${{ github.workspace }}/build.sh"
