--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,6 @@ on:
   schedule:
     - cron: "0 0/12 * * *"
   push:
-    branches: [main]
 
 jobs:
   build:
@@ -30,6 +29,7 @@ jobs:
               -H "X-GitHub-Api-Version: 2022-11-28" \
               https://api.github.com/repos/${{ github.repository }}/git/tags \
               -d '{"tag":"${{ env.BWRAP_VER }}","message":"automated commit","object":"${{ github.sha }}","type":"commit"}'
+        if: github.ref_name == 'main'
       - name: Release
         uses: ncipollo/release-action@v1
         with:
@@ -37,3 +37,4 @@ jobs:
           commit: main
           name: ${{ env.BWRAP_VER }}
           tag: ${{ env.BWRAP_VER }}
+        if: github.ref_name == 'main'
